src-errormsg/E01-ReturnListNotElement/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E01-ReturnListNotElement/Plinth.hs:20:35: error: [GHC-83865]
    • Couldn't match expected type ‘Integer’
                  with actual type ‘List Integer’
    • In the expression: Cons (acc + n) Nil
      In the first argument of ‘foldList’, namely
        ‘(\ acc n -> Cons (acc + n) Nil)’
      In the expression: foldList (\ acc n -> Cons (acc + n) Nil) 0
   |
20 | sumIntegers = foldList (\acc n -> Cons (acc + n) Nil) 0
   |                                   ^^^^^^^^^^^^^^^^^^
